[tool.poetry]
name = "indexoor"
version = "0.1.0"
description = ""
authors = ["theo <theodorusib@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
web3 = "^5.26.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
